--- a/IssueTracker/src/main/webapp/WEB-INF/web.xml
+++ b/IssueTracker/src/main/webapp/WEB-INF/web.xml
@@ -42,7 +42,7 @@ language governing permissions and limitations under the License. -->
     
     <context-param>
         <param-name>configuration</param-name>
-        <param-value>deployment</param-value>
+        <param-value>development</param-value>
     </context-param>
 
 </web-app>
