--- a/pom.xml
+++ b/pom.xml
@@ -164,7 +164,7 @@
             <activation> <property><name>prod</name></property> </activation>
             <properties>
                 <wicket.mode>development</wicket.mode> <!-- development | deployment -->
-                <jboss-as.deploy.hostname>products.app.eng.bos.redhat.com</jboss-as.deploy.hostname>
+                <jboss-as.deploy.hostname>eshoe.app.eng.bos.redhat.com</jboss-as.deploy.hostname>
                 <plugin.war.warName>ROOT</plugin.war.warName>
             </properties>
             <!-- JBoss AS plugin - deploy automatically. -->
@@ -187,7 +187,7 @@
                             <configuration>
                                 <force>true</force>
                                 <username>admin</username>
-                                <password>${essc.deploy.pass.prod}</password>
+                                <password>${eshoe.deploy.pass.prod}</password>
                             </configuration>
                         </execution></executions>
                 -->
