--- a/pom.xml
+++ b/pom.xml
@@ -289,6 +289,14 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>4.2.1.Final</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- Hibernate -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.171</version>
+            <scope>provided</scope>
         </dependency>
         <!--
         <dependency>
