--- a/IssueTracker/pom.xml
+++ b/IssueTracker/pom.xml
@@ -107,6 +107,11 @@
             <version>${picketbox.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.picketbox</groupId>
+            <artifactId>picketbox-http</artifactId>
+            <version>${picketbox.version}</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.1</version>
