--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,12 @@
             <resource>
                 <directory>src/main/java</directory>
                 <filtering>false</filtering>
-                <includes> <include>**</include> </includes>
-                <excludes> <exclude>**/*.java</exclude> </excludes>
+                <includes> 
+                    <include>**</include> 
+                </includes>
+                <excludes> 
+                    <exclude>**/*.java</exclude> 
+                </excludes>
             </resource>
         </resources>
         <testResources>
@@ -63,8 +67,12 @@
             <testResource>
                 <directory>src/test/java</directory>
                 <filtering>false</filtering>
-                <includes> <include>**</include> </includes>
-                <excludes> <exclude>**/*.java</exclude> </excludes>
+                <includes> 
+                    <include>**</include> 
+                </includes>
+                <excludes> 
+                    <exclude>**/*.java</exclude> 
+                </excludes>
             </testResource>
         </testResources>
         
@@ -82,7 +90,9 @@
                         <resource>
                             <directory>${basedir}/src/main/webapp/WEB-INF</directory>
                             <targetPath>WEB-INF</targetPath>
-                            <includes><include>**/*</include></includes>
+                            <includes>
+                                <include>**/*</include>
+                            </includes>
                             <filtering>true</filtering>
                         </resource>
                     </webResources>
@@ -107,7 +117,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
-                <configuration> <source>1.6</source> <target>1.6</target>
+                <configuration> 
+                    <source>1.6</source> 
+                    <target>1.6</target>
                     <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>
@@ -122,12 +134,19 @@
                 <executions>
                     <execution>
                         <phase>validate</phase>
-                        <goals> <goal>copy</goal> </goals>
+                        <goals> 
+                            <goal>copy</goal> 
+                        </goals>
                         <configuration>
                             <outputDirectory>${endorsed.dir}</outputDirectory>
                             <silent>true</silent>
                             <artifactItems>
-                                <artifactItem> <groupId>javax</groupId> <artifactId>javaee-endorsed-api</artifactId> <version>6.0</version> <type>jar</type> </artifactItem>
+                                <artifactItem> 
+                                    <groupId>javax</groupId> 
+                                    <artifactId>javaee-endorsed-api</artifactId> 
+                                    <version>6.0</version> 
+                                    <type>jar</type> 
+                                </artifactItem>
                             </artifactItems>
                         </configuration>
                     </execution>
@@ -137,33 +156,37 @@
     </build>
     
     
-	<profiles>
-		<profile>
-			<!-- Use this profile for any OpenShift specific customization your app  will need.
-			     By default that is to put the resulting archive into the 'deployments' folder. -->
-			<id>openshift</id>
+    <profiles>
+        <profile>
+            <!-- Use this profile for any OpenShift specific customization your app  will need.
+            By default that is to put the resulting archive into the 'deployments' folder. -->
+            <id>openshift</id>
             <properties>
                 <eshoe.dataSource>MysqlDS</eshoe.dataSource>
             </properties>
-			<build>
-				<finalName>monca</finalName>
-				<plugins>
-					<plugin>
-						<artifactId>maven-war-plugin</artifactId>
-						<version>2.3</version>
-						<configuration>
-							<outputDirectory>deployments</outputDirectory>
-							<warName>ROOT</warName>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
+            <build>
+                <finalName>monca</finalName>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-war-plugin</artifactId>
+                        <version>2.3</version>
+                        <configuration>
+                            <outputDirectory>deployments</outputDirectory>
+                            <warName>ROOT</warName>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         
         <!-- Production. -->
         <profile>
             <id>prod</id>
-            <activation> <property><name>prod</name></property> </activation>
+            <activation> 
+                <property>
+                    <name>prod</name>
+                </property> 
+            </activation>
             <properties>
                 <wicket.mode>development</wicket.mode> <!-- development | deployment -->
                 <jboss-as.deploy.hostname>eshoe.app.eng.bos.redhat.com</jboss-as.deploy.hostname>
@@ -199,13 +222,17 @@
         <!-- Debug. -->
         <profile>
             <id>debug</id>
-            <activation><property><name>debug</name></property></activation>
+            <activation>
+                <property>
+                    <name>debug</name>
+                </property>
+            </activation>
             <properties>
                 <jvm.args.debug>-Xrunjdwp:transport=dt_socket,address=4000,server=y,suspend=y</jvm.args.debug>
             </properties>
         </profile>
 
-	</profiles>
+    </profiles>
     
     
     <dependencyManagement>
@@ -390,20 +417,35 @@
             <version>1.6.6</version>
         </dependency>
         
+        <!--junit test-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        
+        
     </dependencies>
     
     <repositories>
-		<repository> <id>eap</id>
-			<url>http://maven.repository.redhat.com/techpreview/all</url>
-			<snapshots> <enabled>true</enabled> </snapshots>
-		</repository>
+        <repository> 
+            <id>eap</id>
+            <url>http://maven.repository.redhat.com/techpreview/all</url>
+            <snapshots> 
+                <enabled>true</enabled> 
+            </snapshots>
+        </repository>
     </repositories>
     
-	<pluginRepositories>
-		<pluginRepository> <id>eap</id>
-			<url>http://maven.repository.redhat.com/techpreview/all</url>
-			<snapshots> <enabled>true</enabled> </snapshots>
-		</pluginRepository>
-	</pluginRepositories>
+    <pluginRepositories>
+        <pluginRepository> 
+            <id>eap</id>
+            <url>http://maven.repository.redhat.com/techpreview/all</url>
+            <snapshots> 
+                <enabled>true</enabled> 
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 
 </project>
