--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <jboss.spec.version>3.0.2.Final</jboss.spec.version>
         <version.wicket>6.6.0</version.wicket>
         <version.wicket.cdi>1.2</version.wicket.cdi>
-        <version.picketbox>5.0.0-2013Jan04</version.picketbox>
+        <version.picketbox>5.0.0.Final</version.picketbox>
 
 
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
