--- a/pom.xml
+++ b/pom.xml
@@ -283,6 +283,14 @@
 
     <!-- Dependencies. -->
     <dependencies>
+        
+        <dependency>
+            <groupId>org.jboss.spec</groupId>
+            <artifactId>jboss-javaee-6.0</artifactId>
+            <version>1.0.0.Final</version>
+            <type>pom</type>
+            <scope>provided</scope>
+        </dependency>
         <!-- Java EE -->
         <dependency>
             <groupId>javax</groupId>
