--- a/pom.xml
+++ b/pom.xml
@@ -424,6 +424,19 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.6.6</version>
         </dependency>
+
+        <!-- Elasticsearch -->
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.holmistr</groupId>
+            <artifactId>elasticsearch-annotations</artifactId>
+            <version>0.1-SNAPSHOT</version>
+        </dependency>
         
         <!--junit test-->
         <dependency>
